# qemuTIVA

./: .gitignore
configs/devices/arm-softmmu/: default.mak
hw/: Kconfig  meson.build
hw/arm/: Kconfig  meson.build  tm4c123gh6pm.c
hw/arm/tm4c123gh6pm/: Kconfig  SYSCTL Registers.txt  build_qemu.sh  build_qemu_dbg.sh  dbg.sh  dbg_cybot.sh  meson.build  run.sh  run_cybot.sh  run_tm4.sh
hw/arm/tm4c123gh6pm/board/include/: adc.h  field.h  gpio.h  joiner.h  packets.h  servo.h  socket_handler.h  test_analog.h  timer_16_32.h  tm4c123gh6pm.h  uart.h  wifi.h
hw/arm/tm4c123gh6pm/board/src/: adc.c  field.c  gpio.c  joiner.c  servo.c  socket_handler.c  test_analog.c  timer_16_32.c  tm4c123gh6pm.c  uart.c  wifi.c
hw/arm/tm4c123gh6pm/ccs_stuff/: test2.out
hw/arm/tm4c123gh6pm/kernel/: Makefile
hw/arm/tm4c123gh6pm/kernel/include/: main.h  tm4c123gh6pm_kernel.h
hw/arm/tm4c123gh6pm/kernel/src/: main.c  tm4c123gh6pm.ld  tm4c123gh6pm_kernel.c
hw/arm/tm4c123gh6pm/wifitest/: Makefile
hw/arm/tm4c123gh6pm/wifitest/src/: client.c  main.h  server.c  socket_handler.c  socket_handler.h
hw/tm4c123gh6pm/: Kconfig  adc.c  adc.h  dbg.sh  i2c.c  i2c.h  meson.build  run.sh  tm4c123gh6pm.c
hw/tm4c123gh6pm/board/include/: adc.h  gpio.h  tm4c123gh6pm.h
hw/tm4c123gh6pm/board/src/: adc.c  gpio.c  i2c.c  tm4c123gh6pm.c
hw/tm4c123gh6pm/include/: gpio.h  i2c.h
hw/tm4c123gh6pm/kernel/: Makefile  tm4c123gh6pm.ld
hw/tm4c123gh6pm/kernel/include/: tm4c123gh6pm_kernel.h
hw/tm4c123gh6pm/kernel/src/: kernel.c  main.c  tm4c123gh6pm.ld  tm4c123gh6pm_kernel.c
hw/tm4c123gh6pm/src/: adc.c  i2c.c  tm4c123gh6pm.c
