arm_ss.add(when: 'CONFIG_TM4C123GH6PM', if_true: files('board/src/tm4c123gh6pm.c'))
arm_ss.add(when: 'CONFIG_TM4C123GH6PM', if_true: files('board/src/adc.c'))
arm_ss.add(when: 'CONFIG_TM4C123GH6PM', if_true: files('board/src/gpio.c'))
arm_ss.add(when: 'CONFIG_TM4C123GH6PM', if_true: files('board/src/timer.c'))

arm_ss.add(when: 'CONFIG_TM4C123GH6PM', if_true: files('board/src/test_analog.c'))
