arm_ss.add(when: 'CONFIG_TM4C123GH6PM', if_true: files('board/src/tm4c123gh6pm.c'))
arm_ss.add(when: 'CONFIG_TM4C123GH6PM', if_true: files('board/src/servo.c'))
arm_ss.add(when: 'CONFIG_TM4C123GH6PM', if_true: files('board/src/timer_16_32.c'))
arm_ss.add(when: 'CONFIG_TM4C123GH6PM', if_true: files('board/src/uart.c'))
arm_ss.add(when: 'CONFIG_TM4C123GH6PM', if_true: files('board/src/adc.c'))
arm_ss.add(when: 'CONFIG_TM4C123GH6PM', if_true: files('board/src/gpio.c'))
arm_ss.add(when: 'CONFIG_TM4C123GH6PM', if_true: files('board/src/joiner.c'))

arm_ss.add(when: 'CONFIG_TM4C123GH6PM', if_true: files('board/src/test_analog.c'))
